--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/state": "^4.0",
+        "api-platform/core": "^4.0",
         "doctrine/orm": "^3.2",
         "ramsey/uuid": "^4.7",
         "symfony/console": "7.1.*",
