--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,11 @@ services:
         autowire: true
         autoconfigure: true
 
-    TegCorp\:
+    TegCorp\SharedKernelBundle\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
+
+    TegCorp\SharedKernelBundle\Application\Command\AsCommandHandler:
+        tags:
+            - { name: messenger.message_handler, bus: command.bus }
