Add csfixer + phpstan

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,17 @@
 ###> IDE ###
 /.idea/
 ###< IDE ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
