--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,11 @@
 name: build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
 
 env:
   COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -18,7 +23,8 @@ jobs:
           php-version: 8.3
       - run: |
           composer install --ignore-platform-reqs
-           XDEBUG_MODE=off vendor/bin/phpstan
+          XDEBUG_MODE=off vendor/bin/phpstan
+
   cs-fixer:
     runs-on: ubuntu-22.04
     name: PHP-CS-Fixer
@@ -27,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Fix CS
         uses: docker://oskarstark/php-cs-fixer-ga
+
   tests:
     runs-on: ubuntu-22.04
     name: PHPUnit
@@ -39,4 +46,31 @@ jobs:
           php-version: 8.3
       - run: |
           composer install --ignore-platform-reqs
-           XDEBUG_MODE=off vendor/bin/phpunit
+          XDEBUG_MODE=off vendor/bin/phpunit
+
+  create_release:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
+    runs-on: ubuntu-latest
+    needs: [phpstan, cs-fixer, tests]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: anothrNick/github-tag-action@1.38.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: |
+            Release created automatically after merging PR #${{ github.event.pull_request.number }}.
+          draft: false
+          prerelease: false
