--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,11 @@
 name: build
 
 on:
-  push:
-    branches:
-      - '**'
   pull_request:
     types: [opened, synchronize, reopened, closed]
+
+permissions:
+  contents: write
 
 env:
   COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
