--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.64",
         "phpstan/phpstan": "^1.12",
-        "phpunit/phpunit": "^11.3"
+        "phpunit/phpunit": "^11.3",
+        "qossmic/deptrac": "^2.0"
     }
 }
