--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -65,7 +65,7 @@ jobs:
   create_release:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
-    needs: [phpstan, cs-fixer, tests]
+    needs: [phpstan, cs-fixer, tests, deptrac]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
