--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -9,12 +9,15 @@ parameters:
         -
             identifier: missingType.iterableValue
         -
-            message: '#PHPDoc tag \@return with type TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\DoctrineRepository\<T of object\> is not subtype of native type static\(TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\DoctrineRepository\<T of object\>\).#'
-            path: src/Infrastructure/Doctrine/DoctrineRepository.php
+            message: '#PHPDoc tag \@return with type TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\ODM\\DoctrineRepository\<T of object\> is not subtype of native type static\(TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\ODM\\DoctrineRepository\<T of object\>\).#'
+            path: src/Infrastructure/Doctrine/ODM/DoctrineRepository.php
+        -
+            message: '#PHPDoc tag \@return with type TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\ORM\\DoctrineRepository\<T of object\> is not subtype of native type static\(TegCorp\\SharedKernelBundle\\Infrastructure\\Doctrine\\ORM\\DoctrineRepository\<T of object\>\).#'
+            path: src/Infrastructure/Doctrine/ORM/DoctrineRepository.php
         -
             message: '#PHPDoc tag \@return with type TegCorp\\SharedKernelBundle\\Domain\\Repository\\RepositoryInterface\<T of object\> is not subtype of native type static\(TegCorp\\SharedKernelBundle\\Domain\\Repository\\RepositoryInterface\<T of object\>\).#'
             path: src/Domain/Repository/RepositoryInterface.php
 
         -
             message: '#Parameter \#1 \$from of method Doctrine\\ORM\\QueryBuilder\:\:from\(\) expects class-string, string given.#'
-            path: src/Infrastructure/Doctrine/DoctrineRepository.php
+            path: src/Infrastructure/Doctrine/ORM/DoctrineRepository.php
