--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Fix CS
         uses: docker://oskarstark/php-cs-fixer-ga
+        env:
+          PHP_CS_FIXER_IGNORE_ENV: 1
 
   deptrac:
     runs-on: ubuntu-22.04
