Add a factory to generate id :minor

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/framework-bundle": "7.2.*",
         "symfony/messenger": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/uid": "7.2.*",
         "symfony/yaml": "7.2.*",
         "webmozart/assert": "^1.11"
     },
